--- a/Hotel.html
+++ b/Hotel.html
@@ -14,6 +14,10 @@
       border-radius: 0;
     }
     
+      .logo {
+          width: 40px;
+          height: 30px;
+      }
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
     .row.content {height: 450px}
     
@@ -51,7 +55,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#"> <img src="24287-full.png" class="logo"> </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
