Descripción del hotel

--- a/Hotel.html
+++ b/Hotel.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -59,10 +59,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="active"><a href="#">Inicio</a></li>
+        <li><a href="#">Establecimiento</a></li>
+        <li><a href="#">Ubicación</a></li>
+        <li><a href="#">Reserva</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -80,9 +81,17 @@
     </div>
     <div class="col-sm-8 text-left"> 
       <h1>Hotel Macià</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Nuestro hotel de 4 estrellas en Barcelona le ofrece todos los servicios necesarios para que su estancia sea una experiencia única.</p>
+
+    <p>El Hotel Macià ofrece a todos sus clientes conexión a internet wifi de la NASA gratis en todo el Hotel. Se encuentran dos salas donde se puede trabajar con su PC, uno de ellos és la cafetería que se encuentra justo al lado de la recepción y el otro en la segunda planta junto al ascensor, por si necesita trabajar en un ambiente más tranquilo.</p>
+
+    <p>Uno de los principales atractivos del Hotel Macià se encuentra en la tercera planta, con una estupenda terraza que le ofrece unas magníficas vistas de todo la playa de Palma, pudiendo contemplar la catedral, puerto de Palma y el paseo marítimo.</p>
+
+    <p>Junto a la piscina se encuentra el solárium, donde podrá relajarse y broncearse un poco antes de ir a las playas de Palma. La sala de fitness cardiovascular (con servicio gratuito de toallas y aguas) complementa perfectamente los alrededores del hotel, ideales para hacer un poco de footing.</p>
+
+<p>Finalmente, le informamos que el Hotel Macià es un hotel No Fumador.</p>
       <hr>
-      <h3>Test</h3>
+      <h3>Imagenes</h3>
       <p>Lorem ipsum...</p>
     </div>
     <div class="col-sm-2 sidenav">
