Añadido de fotos

--- a/Hotel.html
+++ b/Hotel.html
@@ -18,6 +18,10 @@
           width: 40px;
           height: 30px;
       }
+      .imagen{
+          width: 100 px;
+          height: 120 px;
+      }
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
     .row.content {height: 450px}
     
@@ -92,7 +96,6 @@
 <p>Finalmente, le informamos que el Hotel Macià es un hotel No Fumador.</p>
       <hr>
       <h3>Imagenes</h3>
-      <p>Lorem ipsum...</p>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
