--- a/Hotel.html
+++ b/Hotel.html
@@ -85,7 +85,7 @@
     </div>
     <div class="col-sm-8 text-left"> 
       <h1>Hotel Macià</h1>
-      <p>Nuestro hotel de 4 estrellas en Barcelona le ofrece todos los servicios necesarios para que su estancia sea una experiencia única.</p>
+      <p>Nuestro hotel de 4 estrellas en Palma le ofrece todos los servicios necesarios para que su estancia sea una experiencia única.</p>
 
     <p>El Hotel Macià ofrece a todos sus clientes conexión a internet wifi de la NASA gratis en todo el Hotel. Se encuentran dos salas donde se puede trabajar con su PC, uno de ellos és la cafetería que se encuentra justo al lado de la recepción y el otro en la segunda planta junto al ascensor, por si necesita trabajar en un ambiente más tranquilo.</p>
 
