--- a/Hotel.html
+++ b/Hotel.html
@@ -109,7 +109,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>Hotel Macià praise the sun (and Krillin) </p>
 </footer>
 
 </body>
